# my_movobase_ws

./: .gitignore  BUG __  BUG__  README.md  SSH-Commande  all_download.txt  backup_mecanum  commande  frames_2025-02-10_21.17.45.gv  frames_2025-02-15_21.02.20.gv
log/: latest_build
src/: joystick_control_node.py
src/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
src/install/movo_base_motor_control/share/movo_base_motor_control/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
src/install/movo_base_motor_control/share/movo_base_motor_control/launch/: 2lidar.launch.py  all_sensors.launch.py  two_tim.launch.py
src/joy_to_twist/: setup.py
src/joy_to_twist/joy_to_twist/: joy_to_twist_node.py
src/log/: latest_build
src/movo_base_motor_control/: READ ME - commande  setup.cfg  setup.py
src/movo_base_motor_control/config/: mecanum_params.yaml
src/movo_base_motor_control/launch/: 2lidar.launch.py  movo_base.launch.py  omni_wheel_launch.py  x_box_movo_base.launch.py
src/movo_base_motor_control/movo_base_motor_control/: forward_kinematic.py  mecanum_controller.py  motor_manager.py  omni_wheel_node.py
src/movo_description/: CMakeLists.txt  package.xml
src/movo_description/launch/: display.launch.py  mod_display.launch.py
src/movo_description/urdf/: movo.urdf.xacro  movo2.urdf
src/movo_nav/: commmand_nav  package.xml  setup.cfg  setup.py
src/movo_nav/config/: dual_lidar_slam_param.yaml  (+3 more)
src/movo_nav2_config/: CMakeLists.txt  package.xml
src/tm_imu/: package.xml
z_old_controller_code/: old_code
(+1198 files in other folders)
