<?xml version="1.0"?>
<package format="3">
  <name>movo_description</name>
  <version>0.1.0</version>
  <description>URDF description for MOVO robot (ported to ROS2)</description>
  <maintainer email="you@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <depend>ros2launch</depend>
  <depend>xacro</depend>
  <depend>robot_state_publisher</depend>
  <depend>rviz2</depend>

  <export>
  <build_type>ament_cmake</build_type>
</export>

</package>
