<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>movo_base_motor_control</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="movo_base@todo.todo">movo_base</maintainer>
  <license>TODO: License declaration</license>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

 <export>
    <build_type>ament_python</build_type>
    <launch>
      <launch_file>launch/omni_wheel_launch.py</launch_file>
    </launch>
  </export>

</package>
